# exp_collective_farmalloc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker.md  docker_seccomp.json  dump_env.sh  dump_env_result.txt
for_code_diff/b_tree/baseline/: b_tree.hpp  b_tree.ipp
for_code_diff/b_tree/dfs/: b_tree.hpp  b_tree.ipp  b_tree_iterator.ipp
for_code_diff/b_tree/hint/: b_tree.hpp  b_tree.ipp  b_tree_node.ipp
for_code_diff/b_tree/local/: b_tree.hpp  b_tree.ipp
for_code_diff/b_tree/local_dfs/: b_tree.hpp  b_tree.ipp  b_tree_iterator.ipp
for_code_diff/b_tree/local_vEB/: b_tree.hpp  b_tree.ipp
for_code_diff/b_tree/vEB/: b_tree.hpp  b_tree.ipp
for_code_diff/skip_list/baseline/: skiplist.hpp
for_code_diff/skip_list/hint/: skiplist.hpp
for_code_diff/skip_list/local/: skiplist.hpp
for_code_diff/skip_list/local_page/: skiplist.hpp
for_code_diff/skip_list/page/: skiplist.hpp
include/: setting.hpp  setting_basis.hpp
include/far_memory_container/: aligned_buffer.hpp
include/far_memory_container/baseline/: b_tree.hpp  b_tree.ipp  b_tree_iterator.ipp  b_tree_node.ipp  skiplist.hpp
scripts/: analyze_edges.sh  analyze_edges_all.sh  figure10.py  figure11.py  figure12.py  figure16.py  figure9.sh  figure9a.py  figure9b.py  figure_10_11.sh  figure_10_11_12.sh  kvs_benchmark.sh  kvs_benchmark_all.sh
src/: analyze_edges_of_collective_allocator_aware_b_tree.cpp  analyze_edges_of_collective_allocator_aware_skiplist.cpp  analyze_edges_of_hinted_b_tree.cpp  analyze_edges_of_hinted_skiplist.cpp  analyze_edges_of_page_aware_b_tree.cpp  analyze_edges_of_page_aware_skiplist.cpp  collective_allocator_aware_b_tree.cpp  collective_allocator_aware_skiplist.cpp  hinted_b_tree.cpp  hinted_skiplist.cpp  page_aware_b_tree.cpp  page_aware_skiplist.cpp  read.cpp
(+10 files in other folders)
